--- a/src/css/style.css
+++ b/src/css/style.css
@@ -128,24 +128,19 @@ body {
     content: '';
     display: table;
     clear: both; }
+  .row [class^='col-'] {
+    background-color: orangered;
+    float: left; }
+    .row [class^='col-']:not(:last-child) {
+      margin-right: 6rem; }
   .row .col-1-of-2 {
-    width: calc( (100% - 6rem) / 2);
-    background-color: orangered;
-    float: left; }
-    .row .col-1-of-2:not(:last-child) {
-      margin-right: 6rem; }
+    width: calc( (100% - 6rem) / 2); }
   .row .col-1-of-3 {
-    width: calc((100% - (6rem * 2)) / 3);
-    background-color: orangered;
-    float: left; }
-    .row .col-1-of-3:not(:last-child) {
-      margin-right: 6rem; }
+    width: calc((100% - (6rem * 2)) / 3); }
   .row .col-2-of-3 {
-    width: calc(100% - (6rem) / 0.15);
-    background-color: orangered;
-    float: left; }
-    .row .col-2-of-3:not(:last-child) {
-      margin-right: 6rem; }
+    width: calc(100% - (100% / 2)); }
+  .row .col-1-of-4 {
+    width: calc((100% - (6rem * 3)) / 4); }
 
 .header {
   height: 95vh;
