--- a/src/css/style.css
+++ b/src/css/style.css
@@ -138,7 +138,7 @@ body {
   .row .col-1-of-3 {
     width: calc((100% - (6rem * 2)) / 3); }
   .row .col-2-of-3 {
-    width: calc(100% - (100% / 2)); }
+    width: calc( ((100% - (6rem * 2)) / 3 * 2) + 6rem); }
   .row .col-1-of-4 {
     width: calc((100% - (6rem * 3)) / 4); }
 
