--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -44,7 +44,9 @@
 
   .col-2-of-3 {
     // We multiply the horizontal gutter by 2 because there will be at least 2 gutters in a 3 column row
-    width: calc(100% - (100% / 2));
+    width: calc(
+      ((100% - (#{$gutter-horizontal} * 2)) / 3 * 2) + #{$gutter-horizontal}
+    );
   }
 
   .col-1-of-4 {
