--- a/src/css/style.css
+++ b/src/css/style.css
@@ -141,6 +141,8 @@ body {
     width: calc( ((100% - (6rem * 2)) / 3 * 2) + 6rem); }
   .row .col-1-of-4 {
     width: calc((100% - (6rem * 3)) / 4); }
+  .row .col-2-of-4 {
+    width: calc( (((100% - (6rem * 3)) / 4) * 2) + 6rem); }
 
 .header {
   height: 95vh;
