--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -9,6 +9,7 @@ body {
   padding: 3rem;
 }
 
+// Primary heading is the main heading of the page (OUTDOORS IS WHERE LIFE HAPPENS)
 .heading-primary {
   color: $color-white;
   text-transform: uppercase;
@@ -40,4 +41,9 @@ body {
 
     animation: moveInRight 1s ease-out;
   }
+}
+
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
 }
